[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/planet.png" type="Texture" id=1]
[ext_resource path="res://scripts/rematch.gd" type="Script" id=2]
[ext_resource path="res://sprites/gamepad/transparentDark22.png" type="Texture" id=3]
[ext_resource path="res://sprites/gamepad/botao_menu2AJ3px (1).png" type="Texture" id=4]
[ext_resource path="res://sprites/gamepad/botao_menuAJ.png" type="Texture" id=5]
[ext_resource path="res://sprites/gamepad/shadedDark24.png" type="Texture" id=6]
[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/prstartk.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 7 )

[node name="rematch" type="Node2D" groups=["rematch"]]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 37.0 ]
}

[node name="itens" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="start" type="Node2D" parent="itens"]
position = Vector2( 48, 199 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="itens/start"]
visible = false
margin_right = 80.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0.0705882, 0.992157, 0.0823529, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0, 0.776471, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 2 )
text = "Retry"

[node name="touchstart" type="TouchScreenButton" parent="itens/start"]
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 5 )
pressed = ExtResource( 4 )

[node name="ranking" type="Node2D" parent="itens"]
position = Vector2( 58, 230 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="itens/ranking"]
visible = false
custom_colors/font_color = Color( 0.027451, 0.0627451, 0.929412, 1 )
custom_colors/font_color_shadow = Color( 0.054902, 0.976471, 0.2, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 2 )
text = "Menu"

[node name="touchmenu" type="TouchScreenButton" parent="itens/ranking"]
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 6 )
pressed = ExtResource( 3 )

[node name="seta" type="Node2D" parent="."]
visible = false
position = Vector2( 28, 213 )
__meta__ = {
"_edit_group_": true
}

[node name="Planet" type="Sprite" parent="seta"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="timer_blink" type="Timer" parent="."]
wait_time = 0.1

[node name="record" type="Label" parent="."]
visible = false
margin_left = 33.0
margin_top = 90.0
margin_right = 122.0
margin_bottom = 106.0
custom_colors/font_color = Color( 0.945098, 0.0784314, 0.909804, 1 )
custom_colors/font_color_shadow = Color( 0.156863, 0.980392, 0.0392157, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 3 )
text = "New Record"
align = 1
valign = 1

[connection signal="pressed" from="itens/start/touchstart" to="." method="_on_touchstart_pressed"]
[connection signal="pressed" from="itens/ranking/touchmenu" to="." method="_on_touchmenu_pressed"]
[connection signal="timeout" from="timer_blink" to="." method="_on_timer_blink_timeout"]
